1、sql构造器优化；2、多数据源事务一致性处理；3、基础数据缓存；